# python-ffmpeg-asyncio

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
ffmpeg/: ffmpeg.py  utils.py
ffmpeg_asyncio/: __init__.py  ffmpeg.py  file.py  options.py  progress.py  protocol.py  statistics.py  stats.py  utils.py
tests/: test_asyncio_listeners.py  test_asyncio_pipe.py  test_asyncio_transcoding.py  test_listeners.py  test_options.py  test_pipe.py  test_stats.py  test_transcoding.py
