[metadata]
name = ffmpeg-asyncio
version = attr: ffmpeg.__version__
description = A python binding for FFmpeg which provides a native async API only
author = Bruce Cutler
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ffmpeg
    asyncio
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    pyee
    typing_extensions
python_requires = >=3.7
packages = find: